--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -11,7 +11,7 @@
   "@next": {
     "description": "Next"
   },
-  "intro_text1": "Read the latest U-Report blogs and stay informed",
+  "intro_text1": "Read the latest U-Report blogs and stay informed.",
   "@intro_text1": {
     "description": "Read the latest U-Report blogs and stay informed"
   },
@@ -19,7 +19,7 @@
   "@chat": {
     "description": "Chat"
   },
-  "intro_text2": "Participate in polls and access to interactive chatbots about topics you care about",
+  "intro_text2": "Participate in polls and access to interactive chatbots about topics you care about.",
   "@intro_text2": {
     "description": "Participate in polls and access to interactive chatbots about topics you care about"
   },
@@ -27,7 +27,7 @@
   "@opinions": {
     "description": "Opinions"
   },
-  "intro_text3": "View polls results and share the findings",
+  "intro_text3": "View polls results and share the findings.",
   "@intro_text3": {
     "description": "View polls results and share the findings"
   },
