--- a/lib/l10n/app_ro.arb
+++ b/lib/l10n/app_ro.arb
@@ -1,11 +1,11 @@
 {
-  "stories": "Povești",
+  "stories": "Articole",
   "@stories": {
-    "description": "Povești"
+    "description": "Articole"
   },
-  "skip": "Sari",
+  "skip": "Sări",
   "@skip": {
-    "description": "Sari"
+    "description": "Sări"
   },
   "next": "Următorul",
   "@next": {
@@ -15,9 +15,9 @@
   "@intro_text1": {
     "description": "Citiți cele mai recente postări U-Report și rămâneți la curent."
   },
-  "chat": "Conversație",
+  "chat": "Chat",
   "@chat": {
-    "description": "Conversație"
+    "description": "Chat"
   },
 
   "intro_text2": "Participate in polls and access to interactive chatbots about topics you care about.",
